# kata

iced_sample/: Cargo.toml
iced_sample/src/: counter.rs  main.rs  todo.rs
kata_api/: Cargo.toml
kata_api/migrations/2020-10-22-050009_create_templates_table/: up.sql
kata_api/proto/: helloworld.proto
kata_api/src/: db.rs  filters.rs  main.rs
kata_api/src/di/: mod.rs  usecase_container.rs
kata_api/src/domain/entities/: template.rs
kata_api/src/domain/repositories/: mod.rs
kata_api/src/handlers/: mod.rs
kata_api/src/models/: templates.rs
kata_api/src/repositories/: template_repository.rs
kata_api/src/usecases/: mod.rs
kata_api/tests/requests/: mod.rs
kata_pc_client/: .gitignore  :w  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.ts
kata_pc_client/src/: index.tsx  main.ts  route.tsx
kata_pc_client/src/adapters/factories/: templateFactory.ts
kata_pc_client/src/adapters/repositories/: templateRepository.ts
kata_pc_client/src/components/commons/: Padding.tsx
kata_pc_client/src/components/modules/: Search.tsx
kata_pc_client/src/consts/: colors.tsx
kata_pc_client/src/router/: linkStyle.tsx  route.tsx
kata_pc_client/types/: image.d.ts
kata_web_client/: .css-modules-rs.table.json  Cargo.toml  DESIGN.md  Makefile  TODO.md  build.rs  css-modules-rs.settings.json
kata_web_client/src/: lib.rs  router.rs
kata_web_client/src/components/common/: button.rs  mod.rs  padding.rs
kata_web_client/src/components/common/form/: text_input.rs
kata_web_client/src/components/pages/: sign_up.css  sign_up.rs
kata_web_client/src/consts/: colors.rs
kata_web_client/src/examples/: mod.rs
kata_web_client/src/examples/fetch/: mod.rs
kata_web_client/src/examples/route/: mod.rs
kata_web_client/src/examples/router/: mod.rs
kata_web_client/src/examples/todo/: mod.rs
wordrobe_api/: .env  Cargo.toml
wordrobe_api/src/: app_state.rs  lib.rs  main.rs  schema.rs
wordrobe_api/src/di/: mod.rs  usecase_container.rs
wordrobe_api/src/domain/entities/: template.rs
wordrobe_api/src/domain/repositories/: template_repository.rs
wordrobe_api/src/entities/: template.rs
wordrobe_api/src/errors/: mod.rs
wordrobe_api/src/handlers/: mod.rs
wordrobe_api/src/models/: templates.rs
wordrobe_api/src/repositories/: template_repository.rs
wordrobe_api/src/usecases/: list_templates_usecase.rs
wordrobe_api/tests/requests/: mod.rs
(+15 files in other folders)
