[package]
name = "kata_web_client"
version = "0.1.0"
authors = ["mori5321 <moriwm77@gmail.com>"]
edition = "2018"

# See more keys keysand their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
yew = "0.17"
yew-router = "0.14.0"
yewtil = { version = "0.3.2", features = ["pure"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
log = "0.4.6"
anyhow = "1.0.34"
strum = "0.19.4"
strum_macros = "0.19.4"
serde = "1"
serde_derive = "1"
css-in-rust = { version = "0.5.0", features = ["yew_integration"]}
css_modules_rs = { path = "/Users/nishimoridaisuke/dev/projects/css_modules_rs" }

[build-dependencies]
css_modules_rs = { path = "/Users/nishimoridaisuke/dev/projects/css_modules_rs" }

