[package]
name = "wordrobe_api"
version = "0.1.0"
authors = ["mori5321 <moriwm77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
# serde_derive = "1.0"
# serde_json = "^1.0.41"
serde = { version = "^1.0.101", features = ["derive"] }